<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@color/imperial_blue"
        android:gravity="center">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/imperial_blue"
        android:gravity="center">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_view_start" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:background="@color/indigo"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/myLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/indigo"
            android:fillViewport="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_id_text"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewGpsLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_gps_lat_text"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewGpsLon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_gps_lon_text"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewGpsTs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_gps_ts_text"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewHttpPostTs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_http_post_ts_text"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>